# hermes

./: .gitignore  AGENTS.md  README.md  vben_html.html
agent/: AGENTS.md  Cargo.toml  README.md
agent/src/: main.rs  ops.rs  server.rs
agent/src/kernel/: memory.rs  mod.rs  plugin.rs  scheduler.rs
agent/src/protocol/: config.rs  crypto.rs  messages.rs  mod.rs
agent/src/services/: file_ops.rs  heartbeat.rs  mod.rs  network.rs  proxy.rs  session.rs  sys_ops.rs  task.rs
agent/src/sys/: mod.rs  native.rs
server/: AGENTS.md  Cargo.toml  Makefile  README.md  config.toml
server/docs/: README.md  c2-completeness-audit.md
server/docs/server-agent/: README.md  agent-lifecycle.md  agent-protocol.md  beacon-heartbeat-design.md  c2-agent-channel-design.md  c2-strengthening-roadmap.md  command-session-design.md  web-terminal-cwd-resolution.md
server/docs/server-architecture/: README.md  kernel-agent-build-domain.md  kernel-agent-domain.md  kernel-auth.md  kernel-command-session-domain.md  kernel-listener-domain.md  kernel-runtime.md  kernel-state-storage.md  kernel-task-domain.md  release-process.md  server-architecture.md
server/docs/server-web-client/: README.md  agent-build-api.md  agent-management-api.md  agent-page-api.md  c2-frontend-expected-api.md  dashboard-overview-api.md  http-api.md  openapi.yaml  web-login-api.md  web-terminal-command-api.md  web-terminal-simple-api.md  websocket-events-api.md
server/scripts/: e2e_regression.py
server/scripts/e2e/: __init__.py  agent_builds.py  agent_full_lifecycle.py  audit_precision.py  auth.py  basic.py  command_session.py  common.py  concurrent_stress.py  database.py  database_consistency.py  database_interruptions.py  db_tools.py  edge.py  fault_matrix.py  full_chain.py  https_listener.py  lifecycle.py  listeners.py
server/src/: console.rs  lib.rs  main.rs  protocol.rs
server/src/agent/: gateway.rs  mod.rs
server/src/agent/listeners/: mod.rs  registry.rs
server/src/api/: AGENTS.md  audits.rs  auth.rs  mod.rs  settings.rs
server/src/api/agent_builds/: mod.rs  mutations.rs  queries.rs
server/src/api/agents/: beacon.rs  file_ops.rs  mod.rs  mutations.rs  proxy.rs  queries.rs  screenshot.rs  tasking.rs
server/src/api/command_sessions/: helpers.rs  mod.rs  mutations.rs  queries.rs
server/src/api/common/: app_state.rs  auth.rs  auth_tests.rs  mod.rs  (+4 more)
server/src/kernel/: AGENTS.md  bus.rs  config.rs  message.rs  mod.rs
server/tests/: api_integration.rs
(+246 files in other folders)
