[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[features]
default = []
tls = ["rustls"]

[dependencies]
sha2 = "0.10.8"
hmac = "0.12.1"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.23", features = ["ring"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Networking_WinSock",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false
overflow-checks = false
